playlist's songs in table

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -40,3 +40,13 @@
   object-fit: cover;
 }
 
+.songsTable {
+  font-size: 1.25em;
+  text-align: center;
+}
+
+td {
+  background-color: lightgrey;
+  border: 1px solid white;
+  width: 33vw;
+}
